Ensure gallery li's don't collapse

--- a/css/project.css
+++ b/css/project.css
@@ -63,7 +63,7 @@ p {
 
 }
 
-.group:after {
+.group:after, .gallery li:after {
     visibility: hidden;
     display: block;
     content: "";
